--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <%= image_tag @user.avatar.url(:medium) %>
+</p>
+
+<p>
   <strong>Name:</strong>
   <%= @user.name %>
 </p>
