--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,5 +39,4 @@
   <%= @user.facebook %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_path(@user) %>
