--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,10 +1,11 @@
-<%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
+
+<%= form_for(current_user, url: users_path) do |f| %>
+  <% if current_user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2><%= pluralize(current_user.errors.count, "error") %> prohibited your info from being saved:</h2>
 
       <ul>
-      <% @user.errors.full_messages.each do |message| %>
+      <% current_user.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
