--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,24 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.add-image-container {
+  height: 150px;
+  width: 100%;
+  background-color: #EEE;
+  display: table;
+  a {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    font-size: 18px;
+  }
+}
+
+.add-screenshot-container {
+  height: 300px;
+  background-color: #FFF;
+}
+
+.project-description {
+  height: 50px;
+}
