--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for(current_user, url: users_path) do |f| %>
+<%= form_for(current_user, url: profile_path) do |f| %>
   <% if current_user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(current_user.errors.count, "error") %> prohibited your info from being saved:</h2>
