--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,9 +1,20 @@
 <div class="row">
-  <div class="col-md-4">
-    Logo / Name
+  <div class="col-md-4 project-thumbnail text-center">
+    <% if project.logo.present? %>
+      <%= image_tag project.logo.url %>
+    <% else %>
+      <div class="add-image-container">
+        <%= link_to "Add an image", "#" %>
+      </div>
+    <% end %>
+
+    <h3><%= link_to project.name, project %></h3>
   </div>
 
   <div class="col-md-8">
-    Description / Links
+    <p><%= project.description %></p>
+    <p><%= link_to "View project", project, class: "btn btn-primary" %></p>
   </div>
 </div>
+
+<hr />
