--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,22 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+  <h2 class="page-header">Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form-horizontal' }) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <div class="form-group">
+      <%= f.label :email, "Email", :class => "col-sm-offset-1 col-sm-2 control-label"  %>
+      <div class="col-sm-6">
+      <%= f.email_field :email, autofocus: true, :class => "form-control" %>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <div class="col-sm-offset-4 col-sm-4">
+        <%= f.submit "Send me reset password instructions", :class => "btn btn-primary btn-block" %>
+      </div>
+    </div>
 
-<%= render "devise/shared/links" %>
+  <% end %>
+
+</div>
