--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,22 +1,31 @@
-<h2>Change your password</h2>
+<div class="container">
+  <h2 class="page-header">Change your password</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f| %>
+    <%= devise_error_messages! %>
+    <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-  </div>
+    <div class="form-group">
+      <%= f.label :password, "New password", :class => "col-sm-offset-1 col-sm-2 control-label" %>
+      <div class="col-sm-6">
+      <%= f.password_field :password, autofocus: true, autocomplete: "off", :class => "form-control" %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <div class="field">
+      <%= f.label :password_confirmation, "Confirm new password", :class => "col-sm-offset-1 col-sm-2 control-label" %>
+      <div class="col-sm-6">
+      <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <div class="col-sm-offset-4 col-sm-4">
+        <%= f.submit "Change my password", :class => "btn btn-primary btn-block" %>
+      </div>
+    </div>
 
-<%= render "devise/shared/links" %>
+  <% end %>
+
+  <%= render "devise/shared/links" %>
+</div>
