--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,25 @@
-<h2>Resend confirmation instructions</h2>
+<div class="container">
+  <h2 class="page-header">Resend confirmation instructions</h2>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post, class: 'form-horizontal' }) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <div class="form-group">
+      <%= f.label :email, "Email",
+      :class => "col-sm-offset-1 col-sm-2 control-label"  %>
+      <div class="col-sm-6">
+      <%= f.email_field :email, autofocus: true,
+      :class => "form-control" %>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <div class="col-sm-offset-4 col-sm-4">
+      <%= f.submit "Resend confirmation instructions",
+      :class => "btn btn-primary btn-block" %>
+      </div>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
