--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,26 @@
-<h2>Resend unlock instructions</h2>
+<div class="container">
+  <h2 class="page-header">Resend unlock instructions</h2>
 
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: unlock_path(resource_name),
+  html: { method: :post }) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <div class="form-group">
+      <%= f.label :email, "Email",
+      :class => "col-sm-offset-1 col-sm-2 control-label" %>
+      <div class="col-sm-6">
+      <%= f.email_field :email, autofocus: true,
+      :class => "form-control"  %>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <div class="col-sm-offset-4 col-sm-4">
+        <%= f.submit "Resend unlock instructions",
+        :class => "btn btn-primary btn-block" %>
+      </div>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
