Remove extra space and center logo on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,5 @@
 @import "bootstrap";
 @import "bootstrap/navbar";
 @import "bootstrap/jumbotron";
+@import "bootstrap/panel";
+@import "static_page";
