--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -1,1 +1,34 @@
+.mainJumbo {
+  border: 1px solid rgba(0,0,0,.2);
+  border-radius: $border-radius-small;
+}
 
+.signup-card {
+  width: 80%;
+  margin: 0 auto;
+  background-color: $gray-lighter;
+  border: 1px solid rgba(0,0,0,.2);
+  .signup-tabs {
+    color: $gray-darker;
+    .tab {
+      text-align: center;
+      padding: 10px;
+      margin-bottom: 10px;
+      background-color: white;
+      cursor: pointer;
+    }
+    .active {
+      background-color: $gray-lighter;
+    }
+  }
+  #signup-form, #signin-form {
+    padding: $padding-base-vertical $padding-base-horizontal;
+    .form-control {
+      margin-bottom: 10px;
+      border-radius: 0;
+    }
+  }
+  #signin-form {
+    display: none;
+  }
+}
