--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <div class="container">
 
     <header>
-      <nav class="navbar navbar-default">
+      <nav class="navbar">
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
@@ -27,8 +27,8 @@
 
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li><%= link_to "Sign Up", "#" %></li>
-              <li><%= link_to "Sign In", "#" %></li>
+              <li id="signup-nav"><%= link_to "Sign Up", "#" %></li>
+              <li id="signin-nav"><%= link_to "Sign In", "#" %></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
