--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -1,8 +1,35 @@
 <div class="container">
-  <div class="jumbotron">
-    <h1>Bug Catcher</h1>
-    <p>Bug catcher helps you iterate through user testing faster by crowd sourcing the work</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign up today!</a></p>
+  <div class="jumbotron mainJumbo">
+    <div class="row">
+      <div class="col-sm-8 info-box">
+        <h1>Bug Catcher</h1>
+        <p>Bug catcher helps you iterate through user testing faster by crowd sourcing the work</p>
+      </div>
+      <div class="col-sm-4">
+        <div class="signup-card">
+          <div class="signup-tabs">
+            <div class="col-xs-6 tab active" id="signup-tab">Sign Up</div>
+            <div class="col-xs-6 tab" id="signin-tab">Sign In</div>
+          </div>
+          <div id="signup-form">
+            <%= form_tag 'google.com' do %>
+              <%= text_field_tag :username, nil, placeholder: "username", class: "form-control" %>
+              <%= password_field_tag :password, nil, placeholder: "password", class: "form-control" %>
+              <%= password_field_tag :password_confirmation, nil, placeholder: "confirm password", class: "form-control" %>
+              <%= submit_tag "Get Started", class: "btn btn-primary form-control" %>
+            <% end %>
+          </div>
+          <div id="signin-form">
+            <%= form_tag 'google.com' do %>
+              <%= text_field_tag :username, nil, placeholder: "username", class: "form-control" %>
+              <%= password_field_tag :password, nil, placeholder: "password", class: "form-control" %>
+              <%= check_box_tag :remember, nil, false, class: 'form-control' %>
+              <%= submit_tag "Sign In", class: "btn btn-primary form-control" %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="row">
@@ -33,7 +60,7 @@
 
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="..." alt="...">
+        <!-- <img src="#" alt="..."> -->
         <div class="caption">
           <h3>Thumbnail label</h3>
           <p>...</p>
@@ -44,7 +71,7 @@
 
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="..." alt="...">
+        <!-- <img src="#" alt="..."> -->
         <div class="caption">
           <h3>Thumbnail label</h3>
           <p>...</p>
@@ -55,7 +82,7 @@
 
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="..." alt="...">
+        <!-- <img src="#" alt="..."> -->
         <div class="caption">
           <h3>Thumbnail label</h3>
           <p>...</p>
