--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,10 @@
 @import "bootstrap/variables";
+@import "bootswatch/yeti/variables";
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootswatch/yeti/bootswatch";
 @import "bootstrap/navbar";
 @import "bootstrap/jumbotron";
 @import "bootstrap/panel";
+@import "bootstrap/thumbnails";
 @import "static_page";
