--- a/app/assets/stylesheets/bootstrap/_panel.scss
+++ b/app/assets/stylesheets/bootstrap/_panel.scss
@@ -4,4 +4,5 @@
   border: 1px solid #DDD;
   border-radius: $panel-border-radius;
   @include box-shadow(0 1px 1px rgba(0,0,0,.05));
+  text-align: center;
 }
