Form layout and project logo add/update/delete

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,25 +1,50 @@
+<div class="col-md-6 col-md-offset-3">
 <%= form_for @project do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: "form-control" %>
+  </div>
+  <% if f.object.logo_file_name %>
+    <div class="media">
+      <div class="media-left media-middle">
+        <%= label_tag "logo" %>
+        <%= image_tag(f.object.logo.url :thumb, class: "img-thumbnail") %>
+      </div>
+      <div class="media-body">
+        <%= f.label 'delete logo' %>
+        <%= check_box_tag 'delete_logo' %>
+      </div>
+    </div>
+    </br>
+    <div class="form-group">
+      <%= f.label :logo, "Overwrite Logo" %>
+      <%= f.file_field :logo %>
+    </div>
+  <% else %>
+    <div class="form-group">
+      <%= f.label :logo, "Add Logo" %>
+      <%= f.file_field :logo %>
+    </div>
+  <% end %>
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_area :description, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :url %>
+    <%= f.text_field :url, class: "form-control" %>
+  </div>
 
-  </br>
-
-  <%= f.label :description %>
-  <%= f.text_area :description %>
-
-  </br>
-
-  <%= f.label :url %>
-  <%= f.text_field :url %>
-
-  </br>
-
+  <%= label_tag "screenshots" %>
   <%= f.fields_for :screenshots do |f| %>
     <%= render partial: 'screenshot_fields', locals: { f: f } %>
   <% end %>
   </br>
+  <p>
   <%= link_to_add_fields "Add Screenshot", f, :screenshots %>
-  </br>
-
-  <%= f.submit %>
+  </p>
+  <div class="form-group">
+    <%= f.submit class: "btn btn-default" %>
+  </div>
 <% end %>
+</div>
