--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -37,7 +37,7 @@
 
   <div class="row">
     <div class="col-sm-6">
-      <div class="panel panel-default">
+      <div class="panel panel-users">
         <div class="panel-heading">
           <h3 class="panel-title">For Testers</h3>
         </div>
@@ -48,7 +48,7 @@
     </div>
 
     <div class="col-sm-6">
-      <div class="panel panel-default">
+      <div class="panel panel-users">
         <div class="panel-heading">
           <h3 class="panel-title">For Developers</h3>
         </div>
@@ -67,7 +67,7 @@
         <div class="caption">
           <h3>Thumbnail label</h3>
           <p>...</p>
-          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+          <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
         </div>
       </div>
     </div>
@@ -78,7 +78,7 @@
         <div class="caption">
           <h3>Thumbnail label</h3>
           <p>...</p>
-          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+          <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
         <div class="caption">
           <h3>Thumbnail label</h3>
           <p>...</p>
-          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+          <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
         </div>
       </div>
     </div>
