--- a/app/assets/stylesheets/bootstrap/_panel.scss
+++ b/app/assets/stylesheets/bootstrap/_panel.scss
@@ -1,8 +1,12 @@
 .panel {
   margin-bottom: 0; //$line-height-computed;
-  background-color: $panel-bg;
-  border: 1px solid #DDD;
-  border-radius: $panel-border-radius;
-  @include box-shadow(0 1px 1px rgba(0,0,0,.05));
   text-align: center;
+}
+
+.panel-title {
+  font-size: ceil(($font-size-base * 2));
+}
+
+.panel-users {
+  @include panel-variant($panel-default-border, $panel-default-text, white, none);
 }
