--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,27 +1,3 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
-
-.project-thumbnail {
-  border-right: 1px solid #EEE;
-}
-
-.add-image-container {
-  height: 150px;
-  width: 100%;
-  display: table;
-  a {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
-    font-size: 18px;
-  }
-}
-
-.add-screenshot-container {
-  height: 300px;
-  background-color: #FFF;
-}
-
-.project-description {
-  height: 50px;
-}
+@import "projects";
