--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,9 +1,11 @@
 <div class="col-md-6 col-md-offset-3">
+
 <%= form_for @project do |f| %>
   <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name, class: "form-control" %>
   </div>
+
   <% if f.object.logo_file_name %>
     <div class="media">
       <div class="media-left media-middle">
@@ -36,8 +38,8 @@
   </div>
 
   <%= label_tag "screenshots" %>
-  <%= f.fields_for :screenshots do |f| %>
-    <%= render partial: 'screenshot_fields', locals: { f: f } %>
+  <%= f.fields_for :screenshots do |s| %>
+    <%= render partial: 'screenshot_fields', locals: { s: s } %>
   <% end %>
   </br>
   <p>
