--- a/app/views/projects/_screenshot_fields.html.erb
+++ b/app/views/projects/_screenshot_fields.html.erb
@@ -1,18 +1,17 @@
-
 <fieldset>
-<% if f.object.new_record? %>
+<% if s.object.new_record? %>
   <div class="form-group">
-    <%= f.label :image, "New Screenshot" %>
-    <%= f.file_field :image %>
+    <%= s.label :image, "New Screenshot" %>
+    <%= s.file_field :image %>
   </div>
 <% else %>
   <div class="media">
     <div class="media-left media-middle">
-      <%= image_tag(f.object.image.url(:medium), class: "media-object") %>
+      <%= image_tag(s.object.image.url(:medium), class: "media-object") %>
     </div>
     <div class="media-body">
-      <%= f.check_box :_destroy %>
-      <%= f.label :_destroy, "Remove Screenshot" %>
+      <%= s.check_box :_destroy %>
+      <%= s.label :_destroy, "Remove Screenshot" %>
     </div>
   </div>
 <% end %>
