--- a/app/views/releases/new.html.erb
+++ b/app/views/releases/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Releases#new</h1>
-<p>Find me in app/views/releases/new.html.erb</p>
+<div class="container">
+  <%= form_for Release.new do |f| %>
+    <div class="form-group">
+      <%= f.label :title, class: "form-control" %>
+      <%= f.text_field :title, class: "form-control" %>
+    </div>
+  <% end %>
+</div>
