--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -12,22 +12,34 @@
             <div class="col-xs-6 tab" id="signin-tab">Sign In</div>
           </div>
           <div id="signup-form">
-            <%= form_tag 'google.com' do %>
-              <%= text_field_tag :username, nil, placeholder: "username", class: "form-control" %>
-              <%= password_field_tag :password, nil, placeholder: "password", class: "form-control" %>
-              <%= password_field_tag :password_confirmation, nil, placeholder: "confirm password", class: "form-control" %>
-              <%= submit_tag "Get Started", class: "btn btn-primary form-control" %>
+            <%= form_for(User.new, url: registration_path(:user)) do |f| %>
+
+              <%= f.email_field :email, autofocus: true, :class => "form-control", placeholder: "email" %>
+              <%= f.password_field :password, autocomplete: "off", :class => "form-control", placeholder: "password" %>
+                  <% if @validatable %>
+                  <em>(<%= @minimum_password_length %> characters minimum)</em>
+                  <% end %>
+
+              <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control", placeholder: "confirm password" %>
+
+              <%= f.submit "Get started", :class => "btn btn-primary btn-block" %>
             <% end %>
           </div>
           <div id="signin-form">
-            <%= form_tag 'google.com' do %>
-              <%= text_field_tag :username, nil, placeholder: "username", class: "form-control" %>
-              <%= password_field_tag :password, nil, placeholder: "password", class: "form-control" %>
-              <div class="form-control remember-me">
-                <%= check_box_tag :remember, nil, false %>
-                <%= label_tag :remember, "Remember me" %>
-              </div>
-              <%= submit_tag "Sign In", class: "btn btn-primary form-control" %>
+            <%= form_for(User.new, url: session_path(:user)) do |f| %>
+              <%= f.email_field :email, autofocus: true, :class => "form-control", placeholder: "email" %>
+              <%= f.password_field :password, autocomplete: "off", :class => "form-control", placeholder: "password" %>
+
+                <div class="form-control remember-me">
+                  <div class="col-md-6">
+                    <%= f.check_box :remember_me %>
+                    <%= f.label :remember_me %>
+                  </div>
+                  <div class="col-md-6">
+                    <%= link_to "Forgot Password?", edit_user_password_url %>
+                  </div>
+                </div>
+              <%= f.submit "Log in", :class => "btn btn-primary btn-block"  %>
             <% end %>
           </div>
         </div>
