Gets home page sign in and sign up working

--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -36,7 +36,7 @@
                     <%= f.label :remember_me %>
                   </div>
                   <div class="col-md-6">
-                    <%= link_to "Forgot Password?", edit_user_password_url %>
+                    <%= link_to "Forgot Password?", new_user_password_url %>
                   </div>
                 </div>
               <%= f.submit "Log in", :class => "btn btn-primary btn-block"  %>
