--- a/app/views/releases/new.html.erb
+++ b/app/views/releases/new.html.erb
@@ -1,8 +1,24 @@
 <div class="container">
-  <%= form_for Release.new do |f| %>
+  <%= form_for [@project, @release], method: :post do |f| %>
     <div class="form-group">
-      <%= f.label :title, class: "form-control" %>
+      <%= f.label :title %>
       <%= f.text_field :title, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :description %>
+      <%= f.text_area :description, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= label_tag "screenshots" %>
+      <%= f.fields_for :screenshots do |fields| %>
+        <%= render '/projects/screenshot_fields', { f: fields } %>
+      <% end %>
+      </br>
+      <p>
+      <%= link_to_add_fields "Add Screenshot", f, :screenshots %>
+    </div>
+    <div class="form-group">
+      <%= f.submit class: "btn btn-default" %>
     </div>
   <% end %>
 </div>
