--- a/app/views/releases/edit.html.erb
+++ b/app/views/releases/edit.html.erb
@@ -1,2 +1,31 @@
-<h1>Releases#edit</h1>
-<p>Find me in app/views/releases/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Edit Release</h1>
+      <%= form_for @release, url: project_release_url(@project, @release), method: "patch" do |f| %>
+        <div class="form-group">
+          <%= f.label :title, class: "form-control" %>
+          <%= f.text_field :title, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :description, class: "form-control" %>
+          <%= f.text_area :description, class: "form-control" %>
+        </div>
+
+        <%= label_tag "screenshots" %>
+        <%= f.fields_for :screenshots do |builder| %>
+          <%= render partial: 'screenshot_fields', locals: { f: builder } %>
+        <% end %>
+        </br>
+        <p>
+        <%= link_to_add_fields "Add Screenshot", f, :screenshots %>
+        </p>
+
+        <div class="form-group">
+          <%= f.submit class: "btn btn-default" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
