fixes the sign up and sign in email field position.

--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div class="col-md-4">
         <div class="signup-card">
-          <div class="signup-tabs">
+          <div class="signup-tabs row">
             <div class="col-xs-6 tab active" id="signup-tab">Sign Up</div>
             <div class="col-xs-6 tab" id="signin-tab">Sign In</div>
           </div>
