--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <h1>Edit</h1>
-      <%= render 'form' %>
+      <%= render 'form', :resource => @projects %>
     </div>
   </div>
 </div>
