--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
   <h2 class="page-header">Sign up</h2>
 
-
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal'}) do |f| %>
 
     <%= devise_error_messages! %>
@@ -38,6 +37,6 @@
   <% end %>
 
   <hr>
-  Already have an account?&nbsp;<%= render "devise/shared/links" %>
+  Already have an account?&nbsp;<%= link_to "Log in", root_url %>
 
 </div>
