--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <%= render 'layouts/messages' %>
   <div class="jumbotron mainJumbo">
     <div class="row">
       <div class="col-md-8 info-box">
