Fixes duplicate error messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,12 +54,7 @@
       </nav>
     </header>
 
-    <% flash.each do |name, msg| %>
-      <div class="alert <%= name == 'notice' ? 'alert-success' : 'alert-danger' %>">
-        <button type="button" class="close" data-dismiss="alert" >&times;</button>
-        <%= msg%>
-      </div>
-    <% end %>
+    <%= render 'layouts/messages' %>
   </div>
   <%= yield %>
 </html>
