--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,6 +1,6 @@
 <% flash.each do |name, msg| %>
-  <%= content_tag :div, :class => "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable", :role => "alert" do %>
-    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-    <%= msg %>
-  <% end %>
+  <div class="alert <%= name == 'notice' ? 'alert-success' : 'alert-danger' %>">
+    <button type="button" class="close" data-dismiss="alert" >&times;</button>
+    <%= msg%>
+  </div>
 <% end %>
