--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,6 +8,7 @@
       </div>
 
       <div class="project-description">
+        <p>Owned by <%= @project.owner.email %></p>
         <%= link_to "Visit webpage", @project.url %>
         <% if current_user == @project.owner %>
           | <%= link_to "Edit project", edit_project_url(@project) %>
@@ -39,16 +40,24 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h3>Current Release:</h3>
+      <h2>Releases <small class="text-right"><%= link_to 'Add New Release', new_project_release_url(@project) if @project.owner == current_user %></small></h2>
     </div>
   </div>
+  <% if @project.releases.any? %>
   <%= render @project.releases.open %>
   <hr />
 
   <div class="row">
     <div class="col-md-12">
-      <h3>Past Releases:</h3>
+      <h4>Closed Releases</h4>
     </div>
   </div>
   <%= render @project.releases.closed %>
+  <% else %>
+  <div class="row">
+    <div class="col-md-12">
+      <p><em>There are no releases yet for this project.</em></p>
+    </div
+  </div>
+  <% end %>
 </div>
