--- a/app/views/releases/_closed_release.html.erb
+++ b/app/views/releases/_closed_release.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-8">
     <h4><%= link_to release.title, project_release_url(release.project, release) %></h4>
-    <p><em>Closed March 7th, 2015</em></p>
+    <p><em>Closed <%= time_ago_in_words(release.updated_at) %> ago</em></p>
     <p>
       <%= release.description %>
     </p>
