--- a/app/views/releases/_open_release.html.erb
+++ b/app/views/releases/_open_release.html.erb
@@ -1,14 +1,15 @@
 <div class="row">
   <div class="col-md-8">
     <h4><%= link_to release.title, project_release_url(release.project, release) %></h4>
+    <p><em>Opened <%= time_ago_in_words(release.created_at) %> ago</em></p>
     <p>
       <%= release.description %>
     </p>
   </div>
 
   <div class="col-md-4 text-center">
-    <p><%= link_to "Add New Release", new_project_release_url(release.project), class: "btn btn-primary" %></p>
-    <p><%= link_to "Edit Release Info", edit_project_release_url(release.project, release) %></p>
+    <% if @project.owner == current_user %>
     <p><%= link_to "Close Release", close_project_release_url(release.project, release) %></p>
+    <% end %>
   </div>
 </div>
