--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -23,11 +23,11 @@
         <h4>Screenshots for this release:</h4>
         <hr />
       </div>
-      <div class="col-md-4">
         <% @screenshots.each do |screenshot| %>
-          <%= image_tag screenshot.image.url(:medium) %>
+          <div class="col-md-4">
+          <%= image_tag screenshot.image.url, class: 'img-responsive img-thumbnail', style: "max-height: 300px;" %>
+          </div>
         <% end %>
-      </div>
     </div>
   <% end %>
 </div>
