--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,2 +1,47 @@
-<h1>Reports#show</h1>
-<p>Find me in app/views/reports/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="page-header">
+        <h2>Report #<%= @report.id %></h2>
+        <h4>
+          <small>
+            <%= @report.release.project.name %> |
+
+            <%= @report.release.title %> |
+
+            Created on <%= @report.created_at.strftime('%B %d, %Y') %> |
+
+            <%= link_to "Edit Report",
+                edit_project_release_report_url(@project, @release, @report) %> |
+
+            <%= link_to "Delete Report",
+                project_release_report_url(@project, @release, @report), method: "delete" %>
+          </small>
+        </h4>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h4><strong>Report Content</strong></h4>
+      <hr/>
+      <p class="lead"><%= @report.content %></p>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-md-12">
+      <h4><strong>Images</strong></h4>
+      <hr/>
+      <p>IMAGES TO BE ADDED</p>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-md-12">
+      <h4><strong>Discussion</strong></h4>
+      <hr/>
+      <p>COMMENTS TO BE ADDED</p>
+    </div>
+  </div>
+</div>
