--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <%= link_to "< Back to Projects", projects_url %>
   <div class="row">
     <div class="col-md-3">
       <h2 style="margin-top: 0;"><%= @project.name %></h2>
