--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,5 +7,7 @@
 @import "bootstrap/jumbotron";
 @import "bootstrap/panel";
 @import "bootstrap/thumbnails";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import "static_page";
 @import "projects";
