--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,21 +1,20 @@
 <div class="container">
-
   <div class="row">
-    <div class="col-md-12">
-
-      <% if @projects.count < 1 %>
-        <h3>You Have No Projects<h3>
-        <p><%= link_to "Add New Project", "projects/new", class: "btn btn-primary"%></p>
-      <% else %>
-        <div class="page-header">
-          <h2>All Projects <small><%= link_to "Add a project", new_project_url %></small></h2>
-        </div>
-        <div class="row">
-          <%= render @projects %>
-        </div>
-      <% end %>
-
-    </div>
+    <% if @projects.count < 1 %>
+      <h3>You Have No Projects</h3>
+      <p><%= link_to "Add a New Project", "projects/new", class: "btn btn-sm btn-primary"%></p>
+    <% else %>
+      <div class="row text-center">
+        <h1>All Projects</h1>
+        <% if current_user.present? %>
+          <%= link_to "Add a New Project", new_project_url, class: "btn btn-sm btn-primary" %>
+        <% else %>
+          <%= link_to "Add a New Project", new_project_url, class: "btn btn-sm btn-primary", data: {confirm: "You must be signed in to start a project"} %>
+        <% end %>
+      </div>
+      <div class="row projects-container">
+        <%= render @projects %>
+      </div>
+    <% end %>
   </div>
-
 </div>
