fix2 put on view

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-6 col-md-offset-3">
-
+<%= render "shared/error_messages" %>
 <%= form_for @project do |f| %>
   <div class="form-group">
     <%= f.label :name %>
