Adds ajax for accept_deny of report from project owner

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,8 +1,30 @@
 <div class="container">
+  <% if @report.release.project.owner == current_user || @report.accepted_by_project_owner == nil  %>
+    <div class="row" id="acceptAlertBox">
+      <div class="alert alert-info" role="alert">
+        <p class="lead" style="color: white;">
+          This is a new report. Please review and either accept or deny this report.
+        </p>
+        <br>
+
+        <%= link_to 'Accept this Report', report_accepted_url(@report), class: 'btn btn-success', remote: true %>
+        <%= link_to 'Deny this Report', report_denied_url(@report), class: 'btn btn-danger', remote: true %>
+      </div>
+    </div>
+  <% end %>
   <div class="row">
     <div class="col-md-12">
       <div class="page-header">
-        <h2>Report #<%= @report.id %></h2>
+        <h2>
+          Report #<%= @report.id %>
+          <% unless @report.accepted_by_project_owner == nil %>
+            <small>
+              You have
+              <span id="acceptStatus"><%= @report.accepted_by_project_owner %> </span>
+              this report
+            </small>
+          <% end %>
+        </h2>
         <h4>
           <small>
             <%= @report.release.project.name %> |
