Adds deny report ajax

--- a/app/views/reports/report_accepted.js.erb
+++ b/app/views/reports/report_accepted.js.erb
@@ -1,2 +1,2 @@
-$('#acceptAlertBox').fadeToggle();
-$('#acceptStatus').text('ACCEPTED');
+$('#acceptAlertBox').slideToggle();
+$('#acceptStatus').html('ACCEPTED');
