--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -17,13 +17,13 @@
       <div class="page-header">
         <h2>
           Report #<%= @report.id %>
-          <% unless @report.accepted_by_project_owner == nil %>
-            <small>
+          <%# unless @report.accepted_by_project_owner == nil %>
+<!--             <small>
               You have
               <span id="acceptStatus"><%= @report.accepted_by_project_owner %> </span>
               this report
-            </small>
-          <% end %>
+            </small> -->
+          <%# end %>
         </h2>
         <h4>
           <small>
