--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
 
-    <% if @projects.count < 1 %>
+    <% if @projects.count == 0 %>
       <h3>You Have No Projects</h3>
-      <p><%= link_to "Add a New Project", "projects/new", class: "btn btn-sm btn-primary"%></p>
+      <p><%= link_to "Add a New Project", new_project_path, class: "btn btn-sm btn-primary"%></p>
     <% else %>
       <div class="row">
         <h1>
